--- a/.github/workflows/quote_generate.yml
+++ b/.github/workflows/quote_generate.yml
@@ -1,12 +1,12 @@
 name: programming quotes generator
 
-#on:
+on:
   # Run workflow based on specific schedule
-  #schedule:
+  schedule:
   # This workflow will run every day at 00:00 UTC.
   # You can use https://crontab.guru/ if cron syntax is
   # looking weird for you
-#    - cron: "* * * * *"
+    - cron: "* * * * *"
 
 jobs:
   build:
