--- a/.github/workflows/quote_generate.yml
+++ b/.github/workflows/quote_generate.yml
@@ -1,13 +1,12 @@
 name: programming quotes generator
 
 on:
-  workflow_dispatch:
   # Run workflow based on specific schedule
-#  schedule:
+  schedule:
   # This workflow will run every day at 00:00 UTC.
   # You can use https://crontab.guru/ if cron syntax is
   # looking weird for you
- #   - cron: "* * * * *"
+    - cron: "* * * * *"
 
 jobs:
   build:
