fix corntab job schedule

--- a/.github/workflows/quote_generate.yml
+++ b/.github/workflows/quote_generate.yml
@@ -3,7 +3,7 @@ name: programming quotes generator
 on:
   # Run workflow based on specific schedule
   schedule:
-    - cron: "* 23 * * *"
+    - cron: "0 0 * * *"
 
 jobs:
   build:
