--- a/.github/workflows/quote_generate.yml
+++ b/.github/workflows/quote_generate.yml
@@ -14,10 +14,10 @@ jobs:
     - uses: actions/checkout@v2
     - run: |
         git fetch --prune --unshallow
-    - name: Set up Python 3.8
-      uses: actions/setup-python@v1
+    - name: Set up Python 3.10
+      uses: actions/setup-python@v4
       with:
-        python-version: 3.8
+        python-version: '3.10'
     - name: generate
       run: |
         python ./scripts/generate_quote.py
